[gd_scene load_steps=3 format=3 uid="uid://wj3p8j71xqnh"]

[ext_resource type="PackedScene" uid="uid://cknc4fijh1a2a" path="res://attr_panel.tscn" id="1_mstkw"]
[ext_resource type="Script" path="res://attr_roller.gd" id="1_ymoma"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 83.0
size_flags_horizontal = 3
script = ExtResource("1_ymoma")

[node name="AttrPanel" parent="." instance=ExtResource("1_mstkw")]
layout_mode = 0
offset_right = 83.0
offset_bottom = 85.0

[node name="RollButton" type="Button" parent="."]
layout_mode = 2
offset_top = 89.0
offset_right = 83.0
offset_bottom = 120.0
text = "Roll"

[connection signal="pressed" from="RollButton" to="." method="_on_roll_button_pressed"]
